# db/schema.rb
@@ -10,10 +10,17 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_03_20_140201) do
+ActiveRecord::Schema.define(version: 2020_03_20_232101) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "announcements", force: :cascade do |t|
+    t.text "content", null: false
+    t.integer "members_ids", default: [], array: true
+    t.bigint "club_id"
+    t.index ["club_id"], name: "index_announcements_on_club_id"
+  end
 
   create_table "clubs", force: :cascade do |t|
     t.string "name"
